test/pure/negative/impure1.mli.expected

*******************************
********** Parsed file ********
*******************************
type t[@@gospel {| mutable model view: int |}]
val f : t -> int[@@gospel {| y = f x
    pure
    modifies x |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

type t
  (*@ ephemeral
      model ...
       *)

val f : t -> int
(*@ y = f x
    modifies ...
     *)
File "impure1.mli", line 5, characters 5-6:
Error: Type checking error: a pure function cannot have writes.
